# shquants

./: .gitignore  CONTEXT.md  README.md  pyproject.toml  report.py  root.py  run.py
analysts/: .gitignore  README.md  pyproject.toml  run.sh
analysts/docs/: 2026-04-14-aras-review.md  2026-04-14-aras-sdd.md  2026-04-14-aras-tdd.md  2026-04-15-analysts-refactor-plan.md  2026-04-15-llm-summary-design.md  2026-04-15-llm-summary-plan.md  2026-04-15-pdf-ingestion-cleanup-plan.md  2026-04-15-pdf-ingestion-review.md  2026-04-15-telethon-crawler-design.md  2026-04-15-telethon-crawler-plan.md  2026-04-15-watch-until-cleanup-plan.md  2026-04-15-watch-until-review.md  2026-04-16-report-pipeline-social-v2.dot  2026-04-16-report-pipeline-social.dot  2026-04-16-report-pipeline.dot  2026-04-16-telegram-source-refactor-plan.md  2026-04-16-watch-fetch-cleanup-plan.md  openclaw-integration.md
analysts/src/: pyaes.py
analysts/src/analysts/: __init__.py  chunking.py  cli.py  config.py  domain.py  embeddings.py  extraction.py  fetcher.py  graphify.py  page_selection.py  parser.py  pdf_images.py  pdf_ingest.py  pdf_text.py  pipeline.py  raw_reports.py  router.py  runner_entry.py  storage.py  summarizer.py  summary_outputs.py  telethon_client.py  (+1 more)
analysts/tests/: test_chunking.py  test_cli.py  test_config.py  test_embeddings.py  test_extraction.py  test_fetcher.py  test_gmail_cli.py  test_gmail_client.py  test_gmail_normalize.py  test_gmail_storage.py  test_gmail_sync.py  test_graphify.py  test_page_selection.py  test_parser.py  test_pdf_images.py  test_pdf_ingest.py  test_pdf_text.py  test_pipeline.py  test_raw_reports.py  test_router.py  test_run_script.py  test_storage.py  test_summarizer.py  test_telegram_sources.py  test_telethon_client.py  test_telethon_config.py  test_watcher.py
(+1625 files in other folders)
