[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aras-analysts"
version = "0.1.0"
description = "Alpha Research Agent System MVP"
requires-python = ">=3.11"
dependencies = [
  "telethon>=1.36,<2",
  "pymupdf>=1.24,<2",
  "playwright>=1.54,<2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
